--- a/_includes/paper_list_international_c_papers.html
+++ b/_includes/paper_list_international_c_papers.html
@@ -40,8 +40,8 @@
         {%- if forloop.first == false -%}
             ,&nbsp;
         {%- endif -%}
-        {%- if displayname == "Hakaze Cho" or displayname == "Yufeng Zhao" -%}
-            <strong><a href="{{ https://www.hakaze-c.com/ }}" target="_blank">{{ displayname }}</a></strong>
+        {%- if displayname == "Haolin Yang" -%}
+            <strong><a href="{{ https://hlyang2001.github.io/hly/ }}" target="_blank">{{ displayname }}</a></strong>
         {%- else -%}
             {%- if displayurl -%}
                 <a href="{{ displayurl }}" target="_blank">{{ displayname }}</a>
