--- a/_includes/paper_list_pre_print_papers.html
+++ b/_includes/paper_list_pre_print_papers.html
@@ -24,8 +24,8 @@
         {%- if forloop.first == false -%}
             ,&nbsp;
         {%- endif -%}
-        {%- if displayname == "Hakaze Cho" or displayname == "Yufeng Zhao" -%}
-            <strong><a href="{{ https://www.hakaze-c.com/ }}" target="_blank">{{ displayname }}</a></strong>
+        {%- if displayname == "Haolin Yang" -%}
+            <strong><a href="{{ https://hlyang2001.github.io/hly/ }}" target="_blank">{{ displayname }}</a></strong>
         {%- else -%}
             {%- if displayurl -%}
                 <a href="{{ displayurl }}" target="_blank">{{ displayname }}</a>
@@ -35,7 +35,7 @@
         {%- endif -%}
     {%- endfor -%}
 <br>
-Pre-print.&nbsp;<strong>{{ year }}</strong>.&nbsp;{%- if pages -%}{{ pages }} pages.&nbsp;{%- endif -%}
+Pre-print. Submitted to {{ venue }}&nbsp;<strong>{{ year }}</strong>.&nbsp;{%- if pages -%}{{ pages }} pages.&nbsp;{%- endif -%}
     {%- if h5 or infl -%} [
         {%- if h5 -%}
             h5= {{ h5 }}
