--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <hr width="100%" />
 
-Forked from [Hakaze Cho's website](https://www.hakaze-c.com/).
+Forked from <a href="https://www.hakaze-c.com/" target="_blank">Hakaze Cho's website</a>.
 <br> Updated on {{ site.time }}.
 <span id="busuanzi_container_site_pv"><br><span id="busuanzi_value_site_pv"></span> Viewed.</span>
