--- a/_includes/paper_statics.html
+++ b/_includes/paper_statics.html
@@ -1,4 +1,4 @@
-{%- assign papers_c = site.data.domestic_c_papers -%}
+{%- assign papers_c = site.data.journals -%}
 {%- assign papers_p = site.data.preprints -%}
 {%- assign papers_i = site.data.international_c_papers -%}
 {%- assign venues = site.data.venues -%}
